test/testData/parser/negative/functions.c


void test1(...) {}

void test2(void x) {}

void test3(int x, void) {}

void test4(int x, ..., int y) {}

void test5(void, ...) {}

void test6(void, void) {}

void (int) {}
