test/testData/parser/negative/functions.err
test/testData/parser/negative/functions.c:3:12: error: ISO C requires a named parameter before '...'
test/testData/parser/negative/functions.c:5:17: error: parameter may not have 'void' type
test/testData/parser/negative/functions.c:7:19: error: 'void' must be the first and only parameter if specified
test/testData/parser/negative/functions.c:9:22: error: expected token ')' instead of ','
test/testData/parser/negative/functions.c:11:12: error: 'void' must be the first and only parameter if specified
test/testData/parser/negative/functions.c:13:12: error: 'void' must be the first and only parameter if specified
test/testData/parser/negative/functions.c:13:18: error: 'void' must be the first and only parameter if specified
test/testData/parser/negative/functions.c:15:7: error: unexpected token INT 'int' instead of )
test/testData/parser/negative/functions.c:15:6: warning: declaration does not declare anything
test/testData/parser/negative/functions.c:15:1: error: variable has incomplete type 'void'
